<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notify_alert_caller_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/caller_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtTitle"
                style="@style/TextAppearance.Compat.Notification.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caller_name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/base_margin_half"
                android:textSize="@dimen/base_margin_x1_5"
                android:gravity="center_horizontal"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/incoming_call"
                style="@style/TextAppearance.Compat.Notification.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/notification_incoming_call_title"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/notification_incoming_call_accept"
            android:text="@string/notification_incoming_call_accept"
            android:textAllCaps="false"
            android:textColor="@color/notification_incoming_call_text" />

        <Button
            android:id="@+id/btnDecline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/notification_incoming_call_decline"
            android:text="@string/notification_incoming_call_decline"
            android:textAllCaps="false"
            android:textColor="@color/notification_incoming_call_text" />
    </LinearLayout>
</LinearLayout>
